styles.css
div.legendTooltip {
    position: absolute;
    text-align: center;
    padding: 2px;
    font: 10px;
    background: lightgrey;
    border: 0px;
    border-radius: 4px;
    pointer-events: none;
    display: block;
}

#outer {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

#descriptions {
/*    margin-left: 20%;*/
/*    margin-right: 20%*/
    overflow-y: scroll;
    height:450px;
    margin-left: 2%;
    margin-right: 2%;
}

